# tinysim

./: CMakeLists.txt
examples/fstest/: CMakeLists.txt  fstest.ino  staio.cpp  staio.h
examples/fstest/assets/: smile.data
tools/: data2arcade.py
